--- a/Zeus.csproj
+++ b/Zeus.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9521DBF7-DB2D-4620-A16E-4E2E2C37FD50}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Athena</RootNamespace>
-    <AssemblyName>Athena</AssemblyName>
+    <RootNamespace>Zeus</RootNamespace>
+    <AssemblyName>Zeus</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
