--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/obj/Debug
-/bin/Debug
-/.vs/Seiya/v15
-/Data
-Zeus.csproj.user
+/obj
+/bin
+/.vs
