--- a/Zeus.csproj
+++ b/Zeus.csproj
@@ -114,6 +114,7 @@
     <Compile Include="WpfBindingUtilities\ObservableObject.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
