--- a/Zeus.csproj
+++ b/Zeus.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Enums\UserAccessLevelEnum.cs" />
     <Compile Include="Utilities\FileIO.cs" />
     <Compile Include="Utilities\Formatter.cs" />
+    <Compile Include="Utilities\InternetAvailability.cs" />
     <Compile Include="Utilities\Logger.cs" />
     <Compile Include="Utilities\Notification.cs" />
     <Compile Include="Utilities\Utilities.cs" />
